# AML-Project-3

./: .gitignore  NONAME_24864294.out  README.md  architecture.py  debug_model.py  erdos_renyi.py  eval_vae.py  evaluate_improved.py  graph_vae_model.pt  main_vae.py  posterior_collapse_analysis.py  pyproject.toml  questions_for_TA.txt  run.py  run.sh  run_improved.py  run_improved_simple.py  test_sampling.py  train.py  training_hashes.txt  utils.py  utils_stats.py  utils_viz.py  vae.py  vgae_mutag.pt
eval/: __init__.py  metrics.py  statistics.py  visualization.py
experiments/gat_hd128_ld64_nr5_ep500_nf2.0_dl2/: model.pt
experiments/gat_hd32_ld16_nr3_ep500_nf3.0_dl2/: model.pt
experiments/gat_hd64_ld32_nr3_ep500_nf3.0_dl1/: model.pt
logs/: 24830849.err  24830849.out  24851278.err  24851278.out  24854650.err  24854650.out  24854660.err  24854660.out  24856965.err  24856965.out  24857045.err  24857045.out  24857127.err  24857127.out  24857977.err  24857977.out  24858055.err  24858055.out  24864295.err  24864295.out  24864380.err  24864380.out  24864426.err  24864426.out  24864480.err  24864480.out  24882722.err  24882722.out  24882941.err  24882941.out  24882944.err  24882944.out  24882948.err  24882948.out  24883115.err  24883115.out
models/: graph_vae.pt  vgae_mutag.pt
src/: VAE.py  VAE_graph_level_hungarian.py  __init__.py  compare_methods.py  erdos_baseline.py  erdos_renyi.py  eval.py  eval_model.py  evaluate.py  graph_vae.py  main.py  run.sh  run_job_array.sh  save_mutag_WL_hash.py  testing_grounds.ipynb  utils.py
src/models/: improved_model.py  layers.py  (+1 more)
(+19 files in other folders)
