[project]
name = "aml-project-3-github"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.10.1",
    "networkx==3.2.1",
    "np>=1.0.2",
    "numpy==2.2.5",
    "scikit-learn>=1.6.1",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "setuptools>=80.3.1",
    "torch==2.4.0",
    "torch-geometric==2.6.1",
    "torch-scatter>=2.1.2",
    "tqdm==4.65.0",
]
